--- a/index.twig
+++ b/index.twig
@@ -28,6 +28,23 @@
 				}
 			});
 
+            $('body').on('click','button.rotate',function(e){
+                var button = $(this);
+                var dir = button.attr('data-dir');
+                var name = button.attr('data-image');
+                $.ajax({
+                    data: { rotate: 1,
+                        dir: dir,
+                        name: name },
+                    url: '?',
+                    success: function(data) {
+                        var img = button.closest('.row').find('img.thumbnail');
+                        var url = img.attr('src');
+                        img.attr('src',url+'&P'+Math.round(Math.random()*1000000)+'=1');
+                    }
+                })
+            });
+
             function initAlbum(album) {
 
             }
@@ -89,9 +106,11 @@
                         <div class="row">
                             <div class='name'>
                                 {{ name|e }}
-                                <button class="delete" data-image="{{ name|e('html_attr') }}">Delete</button>
+                                <button class="delete" data-image="{{ i }}/{{ name|e('html_attr') }}">Delete</button>
+                                <button class="rotate" data-dir="right" data-image="{{ i }}/{{ name|e('html_attr') }}">Rotate Right</button>
+                                <button class="rotate" data-dir="left" data-image="{{ i }}/{{ name|e('html_attr') }}">Rotate Left</button>
                             </div>
-                            <div class='image'><img src='/sync/{{ i }}/{{ name|e('html_attr') }}'/></div>
+                            <div class='image'><img class='thumbnail' src='thumb.php?name={{ i }}/{{ name|e('html_attr') }}'/></div>
                             <div class='info'></div>
                         </div>
                     </div>
