--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
 		margin: 0 0 10px 0;
 	}
 	.info {
-		margin: -4px 0 4px 0;
+		margin: 0 0 4px 0;
 		font-size: 80%;
 		font-style: italic;
 		opacity: 0.75;
@@ -81,4 +81,58 @@
 	}
 	.message {
 		font-style: italic;
-	}	
+	}
+    .thumbnail {
+        vertical-align: bottom;
+    }
+    .container {
+        display: inline-block;
+        position: relative;
+    }
+    .caption {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        color: white;
+        padding: 0;
+        margin: 0;
+    }
+    textarea.caption:focus {
+        outline: none;
+    }
+    textarea.caption {
+        display: block;
+        z-index: 10100;
+        border: 2px solid white;
+        padding-top: 2px;
+        background: black;
+    }
+    div.caption {
+        display: inline-block;
+        text-shadow: 1px 1px 3px black;
+        white-space: pre-line;
+        min-height: 20px;
+        cursor: text;
+    }
+    .controls {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 100%;
+        background: black;
+        padding: 6px;
+        z-index: 10100;
+    }
+    #cover {
+        background: black;
+        opacity: 0.8;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 10000;
+        position: fixed;
+        display: none;
+
+    }
