--- a/index.twig
+++ b/index.twig
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html class="{{ htmlClasses }}" data-detection="{{ htmlClasses }}">
+<html class="cdpf home {{ htmlClasses }}" data-detection="{{ htmlClasses }}">
 	<head>
 		<title>CDPF</title>
+        <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-darkness/jquery-ui.css" rel="stylesheet" type="text/css" />
 		<style>
 			@import url(style.css);
+            {% if customCSS %}
+            @import url({{ customCSS }});
+            {% endif %}
 		</style>
         <meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
@@ -11,8 +15,11 @@
         <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script src="lib/jquery.lazyload.min.js"></script>
         <script src="lib/jquery.autosize.min.js"></script>
-        <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/ui-darkness/jquery-ui.css" rel="stylesheet" type="text/css" />
+        <script src="lib/jquery.upload-1.0.2.min.js"></script>
         {% include 'lib/mobile-rotation-script.twig' %}
+        {% if googleAnalyticsID is defined %}
+            {% include 'lib/analytics.twig' %}
+        {% endif %}
 	</head>
 	<body>
 		<script>
@@ -143,61 +150,55 @@
 
         </script>
 	
-        <div class='title'>{{ title|e }}</div>
+        <div class='title'>
+            <div id="pallet">
+                <form id='logout' method='post'>
+                    <input id='logouter' type='submit' name='logout' value='Logout'/>
+                </form>
+            </div>
+            {{ title|e }}
+        </div>
 
         <div id='upload'>
             <div class='subtitle'>{{ message|e }}</div>
-            <form method="post" enctype="multipart/form-data">
-                <div>
-                    <div class='section'>
-                        Upload: <input type='file' name='the-file' value="Choose Photo"/>
-                        <input type='hidden' name='the-album' value="{{ albumSelected }}"/>
-                    </div>
+            <div id="uploadArea">
+                <div id="uploadForm">
+                    <form method="post" enctype="multipart/form-data">
+                        <input type="file" name="the-file" id="file1">
+                        <input type="hidden" name="the-album" value="{{ albumSelected }}"/>
+                    </form>
                 </div>
-                <div>
-                    <div class='section'>
-                        <input type='submit' name='submit' value='Upload'/>
-                    </div>
+                <div id="uploadProgress">
+                    <img src="busy.gif" style="zoom: 33%;"/>
                 </div>
-            </form>
+            </div>
         </div>
 
         <div class='albums'>
             {% for i in range( 1 , albumCount ) %}
-            <div class="albumButton {% if albumSelected == i %}selected{% endif %}" data-album-num="{{ i }}" >{{ i }}</div>
+            <div class="albumButton {% if albumSelected == i %}selected{% endif %}" data-album-num="{{ i }}" >
+                {% if albumNames[i-1] is defined %}
+                    {{ albumNames[i-1] }}
+                {% else %}
+                    {{ i }}
+                {% endif %}
+            </div>
             {% endfor %}
         </div>
 
         <div id='photos'>
         {% for i in range(1,albumCount) %}
             <div class='album' id="album{{  i  }}" {% if albumSelected != i %}style='display: none;'{% endif %} >
-                <div class='subtitle'>Album {{  i  }}</div>
+                <div class='subtitle'>
+                    {% if albumNames[i-1] is defined %}
+                        {{ albumNames[i-1] }}
+                    {% else %}
+                        {{ i }}
+                    {% endif %}
+                </div>
 
                 {% for item in images[i] %}
-                    <div>
-                        <div class="row">
-                            <div class='name'>
-                                <span>{{ item.name|e }}</span>
-                                <span>
-                                    <button class="delete" data-image="{{ i }}/{{ item.name|e('html_attr') }}">Delete</button>
-                                    <button class="rotate" data-dir="left" data-image="{{ i }}/{{ item.name|e('html_attr') }}">&#x21BA;</button>
-                                    <button class="rotate" data-dir="right" data-image="{{ i }}/{{ item.name|e('html_attr') }}">&#x21BB;</button>
-                                    <button class="edit" data-image="{{ i }}/{{ item.name|e('html_attr') }}" data-caption="{{ item.caption }}">Edit Caption</button>
-                                </span>
-                            </div>
-                            <div class='image'>
-                                <div class='container'>
-                                    {% if loop.index<5 %}
-                                        <img class='thumbnail' src='thumb.php?name={{ i }}/{{ item.name|e('html_attr') }}' width="{{ thumbWidth }}" height="{{ thumbHeight }}"/>
-                                    {% else %}
-                                        <img class='thumbnail lazy' src='placeholder.png' data-original='thumb.php?name={{ i }}/{{ item.name|e('html_attr') }}' width="{{ thumbWidth }}" height="{{ thumbHeight }}"/>
-                                    {% endif %}
-                                    <div class='caption'>{{ item.caption }}</div>
-                                </div>
-                            </div>
-                            <div class='info'>{{ item.size[0] }} x {{ item.size[1] }}</div>
-                        </div>
-                    </div>
+                    {% include "image.twig" %}
                 {% else %}
                     <div class='message'>No photos to display</div>
                 {% endfor %}
@@ -221,4 +222,30 @@
 	<script>
         $('.lazy').lazyload({effect : "fadeIn"})
 	</script>
+    {% if customJS %}
+        <script src="{{ customJS }}"></script>
+    {% endif %}
+
+    <script type="text/javascript">
+        $('#file1').change(function() {
+            $(this).upload(
+                '/',
+                { "the-album": $('input[name=the-album]').val(), "upload-submit" : 1 },
+                function(event,data) {
+                    if (event==="start") {
+                        $('#uploadArea').addClass('uploading');
+                    } else {
+                        $('#uploadArea').removeClass('uploading');
+                        var section = $(data);
+                        var message = section.find('.ajax-message').text();
+                        $('.subtitle').text(message?message:"");
+                        section.find('.ajax-message').remove();
+                        $('.album:visible').append(section);
+                    }
+                },
+                'html'
+            );
+        });
+    </script>
+
 </html>
