Fixed upload add-in name

--- a/index.twig
+++ b/index.twig
@@ -228,7 +228,7 @@
 
     <script type="text/javascript">
         $('#file1').change(function() {
-            $(this).upload(
+            $(this).upload2(
                 '/',
                 { "the-album": $('input[name=the-album]').val(), "upload-submit" : 1 },
                 function(event,data) {
